# ecommerce-api

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: api_v1.py  dependencies.py
app/api/endpoints/: products.py  tasks.py  users.py
app/core/: celery_app.py  config.py  security.py
app/db/: session.py
app/models/: product_db.py  user_db.py
app/schemas/: product.py  user.py
app/services/: auth_service.py  base.py  product_service.py  tasks.py  user_service.py
migrations/: env.py
migrations/versions/: 0d6218f3cab6_create_users_table.py  3f775579c0c5_auto_migration.py  88383f60f5ac_auto_migration.py  8cd918f646f2_auto_migration.py  90bc1b464159_add_keywords_to_product.py  9d7a93f4fb44_auto_migration.py  b60bf1b29beb_auto_migration.py  bc870687e937_initial_migration.py  df4b745c4a89_rename_keywords_to_keyword.py  e77c401a6e16_auto_migration.py  f22b95f18256_auto_migration.py
tests/: conftest.py  test_products.py  test_users.py
